--- a/client/app/layout/header.html
+++ b/client/app/layout/header.html
@@ -4,10 +4,7 @@
     <!-- Logo -->
     <div class="logo bg-success">
         <a href="#!/main">
-            <!-- <div class="logo-image"></div> -->
-            <!-- <img class="logo-image" src="../../assets/images/logo.png" alt="Logo Image"> -->
-            <!-- <span class="logo-icon material-icons">dashboard</span> -->
-            <!-- <span class="logo-text">{{main.brand}}</span> -->
+            <!-- link home page -->
         </a>
     </div>
 
